--- a/book_fair_backend/pom.xml
+++ b/book_fair_backend/pom.xml
@@ -53,9 +53,9 @@
 
 		<!-- ✅ Explicit Jakarta Mail (for JDK 21 compatibility) -->
 		<dependency>
-			<groupId>com.sun.mail</groupId>
+			<groupId>org.eclipse.angus</groupId>
 			<artifactId>jakarta.mail</artifactId>
-			<version>2.0.1</version>
+			<version>2.0.3</version>
 		</dependency>
 
 		<!-- Database -->
