--- a/book_fair_backend/pom.xml
+++ b/book_fair_backend/pom.xml
@@ -45,18 +45,28 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		<!-- ✅ Spring Boot Mail Starter -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
+                <!-- ✅ Spring Boot Mail Starter -->
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-mail</artifactId>
+                </dependency>
 
-		<!-- ✅ Explicit Jakarta Mail (for JDK 21 compatibility) -->
-		<dependency>
-			<groupId>org.eclipse.angus</groupId>
-			<artifactId>jakarta.mail</artifactId>
-			<version>2.0.3</version>
-		</dependency>
+                <!-- ✅ Explicit Jakarta Mail dependencies for JDK 21 compatibility -->
+                <dependency>
+                        <groupId>jakarta.mail</groupId>
+                        <artifactId>jakarta.mail-api</artifactId>
+                        <version>2.1.3</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.eclipse.angus</groupId>
+                        <artifactId>angus-mail</artifactId>
+                        <version>2.0.3</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.eclipse.angus</groupId>
+                        <artifactId>angus-activation</artifactId>
+                        <version>2.0.1</version>
+                </dependency>
 
 		<!-- Database -->
 		<dependency>
