--- a/book_fair_backend/src/main/resources/application.yml
+++ b/book_fair_backend/src/main/resources/application.yml
@@ -26,8 +26,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username:
-    password:
+    username: farhadfd08@gmail.com
+    password: wljo fwql bxqx oaoy
     from: no-reply@bookfair.lk
     properties:
       mail:
